# ac-bootcamp-public

./: .gitignore  example.md
learning_skills/: error-autopsy.md  post-task-retro.md  weekly-skill-review.md
livecoding/lab_checker/: Agent.md  PLAN.md  pyproject.toml
livecoding/lab_checker/codecheck/: __init__.py  analysis.py  cli.py  execution.py  generator.py  linting.py  models.py  naming.py  quarto.py
livecoding/lab_checker/tests/: test_analysis.py  test_cli.py  test_execution.py  test_generator.py  test_linting.py  test_quarto.py
livecoding/lab_checker/tests/fixtures/: sample_valid.py
livecoding/rag/: codex.md  exploration_rag.ipynb  inspections.txt  pinecone_payloads.py
notebooks/dashboard/: README.md  eval_dashboard.html  eval_dashboard_panel.py  eval_dashboard_plotly.py  eval_data.py  panel_dashboard.html  requirements.txt
notebooks/gift/: knowledge-graph-explorer.html  vocabulary_processed.md
notebooks/week-1/submodule-1-ai-basics-python/: m1_04_python.py
notebooks/week-1/submodule-2-ml-neural-networks/: m1_06_sklearn.ipynb
notebooks/week-1/submodule-4-speech-recognition/: speech_recognition_breaking_points.ipynb  stt.ipynb  tts.ipynb
notebooks/week-2/submodule-1-prompt-engineering/: m2_02_advanced-prompt-techniques.ipynb  m2_03_prompt_competition.ipynb
notebooks/week-3/: 00_dynamic_prompting.ipynb  example.py  mcp_introduction.ipynb  rag_openai.ipynb
notebooks/week-7/: 01_openevals.ipynb  02_langsmith.ipynb
template/: README.md  codex.md
template_advanced/: README.md  codex.md
(+3 files in other folders)
